Estandarización de estructura y estilos

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <nav class="navegation">
-        <ul>
+        <ul class="nav-ul">
             <a href="#"><li class="botones">Boton 1</li></a>
             <a href="#"><li class="botones">Boton 2</li></a>
             <a href="#"><li class="botones">Boton 3</li></a>
@@ -31,62 +31,72 @@
             <a href="#"><li class="botones">Boton 5</li></a>
         </ul>
     </nav>
-    <div class="top">
-        <ul>
-            <li>
-                <img src="/Images/atardecer.jpg" alt="Imagen de la Naturaleza" width="100">
-                <h2>Titulo 1</h2>
-                <p><a href="#">Leer más</a></p>
-            </li>
-            <li>
-                <img src="/Images/Ventana.jpg" alt="Ventana de un avión" width="100">
-                <h2>Titulo 2</h2>
-                <p><a href="#">Leer más</a></p>
-            </li>
-            <li>
-                <img src="/Images/Naturaleza.jpg" alt="Imagen de la Naturaleza" width="100">
-                <h2>Titulo 3</h2>
-                <p><a href="#">Leer más</a></p>
-            </li>
-        </ul>
-    </div>     
-        <section>
-            <aside id="Izq">
-                <ul>
-                    <li><a href="">Link 1</a></li>
-                    <li><a href="">Link 2</a></li>
-                    <li><a href="">Link 3</a></li>
-                    <li><a href="">Link 4</a></li>
+    <main>
+        <div class="top">
+            <ul class="top-ul">
+                <li class="list-item">
+                    <img src="/Images/atardecer.jpg" alt="Imagen de la Naturaleza" class="item-img" width="100">
+                    <h2 class="item-title">Titulo 1</h2>
+                    <p class="item-text"><a href="#">Leer más</a></p>
+                </li>
+                <li class="list-item">
+                    <img src="/Images/Ventana.jpg" alt="Ventana de un avión" class="item-img" width="100">
+                    <h2 class="item-title">Titulo 2</h2>
+                    <p class="item-text"><a href="#">Leer más</a></p>
+                </li>
+                <li class="list-item">
+                    <img src="/Images/Naturaleza.jpg" alt="Imagen de la Naturaleza" class="item-img" width="100">
+                    <h2 class="item-title">Titulo 3</h2>
+                    <p class="item-text"><a href="#">Leer más</a></p>
+                </li>
+            </ul>
+        </div>     
+        <section class="content">
+            <aside class="aside-izq">
+                <ul class="list-aside-izq">
+                    <li class="aside-izq-item"><a href="#" class="link-aside-izq">Link 1</a></li>
+                    <li class="aside-izq-item"><a href="#" class="link-aside-izq">Link 2</a></li>
+                    <li class="aside-izq-item"><a href="#" class="link-aside-izq">Link 3</a></li>
+                    <li class="aside-izq-item"><a href="#" class="link-aside-izq">Link 4</a></li>
                 </ul>
             </aside>
-            <article>
-                <h2>Parrafo</h2>
-                <p><img src="/Images/Girasol.jpg" alt="Girasol" width="250"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas delectus iusto saepe aut a, ab voluptatem facere assumenda autem! Necessitatibus exercitationem, voluptates at atque harum officiis fugit velit accusamus sunt!</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates repellat neque temporibus dolorem et quas maiores commodi debitis labore possimus! Tenetur, illum? Animi aliquid dolorum, voluptates unde ab quidem nemo?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi, delectus quae similique accusamus ratione eum debitis. Ut assumenda omnis inventore quod quam. Nobis eaque maxime fugit autem veritatis nisi.</p>
+            <article class="center-content">
+                <h2 class="title-center-content">Parrafo</h2>
+                <div class="div-center-content">
+                    <div class="img-center-content">
+                        <img src="/Images/Girasol.jpg" alt="Girasol" width="250">
+                    </div>
+                    <div class="text-center-content">
+                        <p class="text-content"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas delectus iusto saepe aut a, ab voluptatem facere assumenda autem! Necessitatibus exercitationem, voluptates at atque harum officiis fugit velit accusamus sunt!</p>
+                        <p class="text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates repellat neque temporibus dolorem et quas maiores commodi debitis labore possimus! Tenetur, illum? Animi aliquid dolorum, voluptates unde ab quidem nemo?</p>
+                        <p class="text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi, delectus quae similique accusamus ratione eum debitis. Ut assumenda omnis inventore quod quam. Nobis eaque maxime fugit autem veritatis nisi.</p>
+                    </div>
+                </div>
             </article>
-            <aside id="Der">
-                <h2>Ingreso</h2>
-                <form action="pagina" method="post">
-                    <label for="usuario">Usuario</label>
-                    <input type="text" name="usuario" id="usuario" required="true" placeholder="Nombre de usuario">
-
-                    <label for="contraseña">Contraseña</label>
-                    <input type="password" name="contraseña" id="contraseña" required="true" placeholder="Contraseña">
-
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" required="true" placeholder="Correo electronico">
-
-                    <input type="submit" name="enviar" value="Ingresar">
-
-                    <input type="reset" name="reset" id="Restablecer">
+            <aside class="aside-der">
+                <h2 class="aside-der-title">Login</h2>
+                <form class="form" action="pagina" method="post">
+                    <div class="form-divs">
+                        <input type="text" class="inputs" name="usuario" id="usuario" required="true" placeholder="Nombre de usuario">
+                    </div>
+                    <div class="form-divs">
+                        <input type="password" class="inputs" name="contraseña" id="contraseña" required="true" placeholder="Contraseña">
+                    </div>
+                    <div class="form-divs">
+                        <input type="email" class="inputs" name="email" id="email" required="true" placeholder="Correo electronico">
+                    </div>
+                    <div class="form-divs">
+                        <input type="submit" class="inputs" name="enviar" value="Ingresar">
+                    </div>
+                    <div class="form-divs">
+                        <input type="reset" class="inputs" name="reset" id="Restablecer">
+                    </div>
                 </form>
-
             </aside>
         </section>
-        <footer>
-            <small>&copy; Todos los derechos reservados 2022.</small>
-        </footer>
+    </main>
+    <footer>
+        <p class="copy"><small>copyright &copy; 2022 Jonathan Blandón - Todos los derechos reservados</small></p>
+    </footer>
 </body>
 </html>
