--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="/CSS/Styles.css" media="">
 </head>
 <body>
-    <div class="chat">Chat</div>
+    <div class="chat">¡Escribanos!</div>
     <header>
         <div class="header-content">
-            <div class="logo">Logo Tipo</div>
+            <div class="logo">Logo</div>
             <div class="div-logos">
                 <div id="Icono1" class="redes">x</div>
                 <div id="Icono2" class="redes">x</div>
@@ -24,11 +24,11 @@
     </header>
     <nav class="navegation">
         <ul class="nav-ul">
-            <a href="#"><li class="botones">Boton 1</li></a>
-            <a href="#"><li class="botones">Boton 2</li></a>
-            <a href="#"><li class="botones">Boton 3</li></a>
-            <a href="#"><li class="botones">Boton 4</li></a>
-            <a href="#"><li class="botones">Boton 5</li></a>
+            <li class="navegation_item"><a href="#" class="nevegation-link"></a>button 1</li>
+            <li class="navegation_item"><a href="#" class="nevegation-link"></a>button 2</li>
+            <li class="navegation_item"><a href="#" class="nevegation-link"></a>button 3</li>
+            <li class="navegation_item"><a href="#" class="nevegation-link"></a>button 4</li>
+            <li class="navegation_item"><a href="#" class="nevegation-link"></a>button 5</li>
         </ul>
     </nav>
     <main>
@@ -95,8 +95,8 @@
             </aside>
         </section>
     </main>
-    <footer>
-        <p class="copy"><small>copyright &copy; 2022 Jonathan Blandón - Todos los derechos reservados</small></p>
+    <footer class="footer">
+        <p class="copy"><small>copyright &copy; 2023 Jonathan Blandón - Todos los derechos reservados</small></p>
     </footer>
 </body>
 </html>
